# modplayer

./: .gitignore  CMakeLists.txt  README.md  build.sh
.claude/: settings.json
assets/sounds/: KLISJE.MOD  bookworm.it
src/: core.cpp  core.h  library.cpp  library.h  main.cpp  playback.cpp  playback.h  pocketmod_impl.c  skin_car.cpp  skin_cassette.cpp  skin_classic.cpp  skin_foobar.cpp  skin_mini.cpp  skin_nano.cpp  skin_term.cpp  skin_tracker.cpp  skin_vinyl.cpp  skin_winamp.cpp  skin_zune.cpp  tags.cpp  tags.h
